# embedded_design_patterns

./: CMakeLists.txt  README.md
01_factory/: CMakeLists.txt  main.c
02_object/: CMakeLists.txt  main.c
03_opaque/: CMakeLists.txt  main.c  ring_buffer.c  ring_buffer.h
04_singleton/: CMakeLists.txt  main.c
05_callback/: CMakeLists.txt  main.c
06_inheritance/: CMakeLists.txt  main.c
07_virtual_api/: CMakeLists.txt  main.c
08_bridge/: CMakeLists.txt  main.c
09_scheduler/: CMakeLists.txt  main.c
10_spinlock/: CMakeLists.txt  main.c
11_mutex/: CMakeLists.txt  main.c
12_state_machine/: CMakeLists.txt  main.c
visualization/: merge.py
